# SLICOT-Reference

./: CMakeLists.txt
